--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,22 +32,24 @@ requirements:
   host:
     - r-base
     - r-matrix
-    - r-spatstat.core >=2.3_2
-    - r-spatstat.data >=2.1_0
-    - r-spatstat.geom >=2.3_0
-    - r-spatstat.random >=2.0
-    - r-spatstat.sparse >=2.0
-    - r-spatstat.utils >=2.2_0
+    - r-spatstat.data >=3.0
+    - r-spatstat.explore >=3.0
+    - r-spatstat.geom >=3.0
+    - r-spatstat.model >=3.0
+    - r-spatstat.random >=3.0
+    - r-spatstat.sparse >=3.0
+    - r-spatstat.utils >=3.0
   run:
     - r-base
     - {{ native }}gcc-libs         # [win]
     - r-matrix
-    - r-spatstat.core >=2.3_2
-    - r-spatstat.data >=2.1_0
-    - r-spatstat.geom >=2.3_0
-    - r-spatstat.random >=2.0
-    - r-spatstat.sparse >=2.0
-    - r-spatstat.utils >=2.2_0
+    - r-spatstat.data >=3.0
+    - r-spatstat.explore >=3.0
+    - r-spatstat.geom >=3.0
+    - r-spatstat.model >=3.0
+    - r-spatstat.random >=3.0
+    - r-spatstat.sparse >=3.0
+    - r-spatstat.utils >=3.0
 
 test:
   commands:
