--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,13 +16,17 @@ build:
   rpaths:
     - lib/R/lib/
     - lib/
+  missing_dso_whitelist:
+    - '*/R.dll'        # [win]
+    - '*/Rblas.dll'    # [win]
+    - '*/Rlapack.dll'  # [win]
 
 requirements:
   build:
-    - {{ compiler('c') }}              # [not win]
-    - {{ stdlib("c") }}                # [not win]
-    - {{ compiler('m2w64_c') }}        # [win]
-    - {{ stdlib("m2w64_c") }}          # [win]
+    - {{ compiler('c') }}          # [not win]
+    - {{ stdlib("c") }}            # [not win]
+    - {{ compiler('m2w64_c') }}    # [win]
+    - {{ stdlib("m2w64_c") }}      # [win]
     - {{ posix }}filesystem        # [win]
     - {{ posix }}make
     - {{ posix }}sed               # [win]
@@ -32,13 +36,14 @@ requirements:
   host:
     - r-base
     - r-matrix
-    - r-spatstat.data >=3.0
-    - r-spatstat.explore >=3.0
-    - r-spatstat.geom >=3.0
-    - r-spatstat.model >=3.0
-    - r-spatstat.random >=3.0
-    - r-spatstat.sparse >=3.0
-    - r-spatstat.utils >=3.0
+    - r-spatstat.data >=3.1_4
+    - r-spatstat.explore >=3.3_3
+    - r-spatstat.geom >=3.3_4
+    - r-spatstat.model >=3.3_2
+    - r-spatstat.random >=3.3_2
+    - r-spatstat.sparse >=3.1_0
+    - r-spatstat.univar >=3.1_1
+    - r-spatstat.utils >=3.1_1
   run:
     - r-base
     - r-matrix
@@ -57,11 +62,13 @@ test:
 
 about:
   home: http://spatstat.org/
+  dev_url: https://github.com/spatstat/spatstat.linnet
   license: GPL-2.0-or-later
   summary: This is a subset of the 'spatstat' package, containing its functionality for spatial data on a linear network.
   license_family: GPL2
   license_file:
     - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
