--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: 6f0d93e09ba1ea8ae17c6157c194e13047bf23d1d69aafdd337e24b786b48d3e
 
 build:
-  number: 0
+  number: 1
   rpaths:
     - lib/R/lib/
     - lib/
@@ -33,6 +33,14 @@ requirements:
     - {{ posix }}coreutils         # [win]
     - {{ posix }}zip               # [win]
     - cross-r-base {{ r_base }}    # [build_platform != target_platform]
+    - r-spatstat.data >=3.1_4      # [build_platform != target_platform]
+    - r-spatstat.explore >=3.3_3   # [build_platform != target_platform]
+    - r-spatstat.geom >=3.3_4      # [build_platform != target_platform]
+    - r-spatstat.model >=3.3_2     # [build_platform != target_platform]
+    - r-spatstat.random >=3.3_2    # [build_platform != target_platform]
+    - r-spatstat.sparse >=3.1_0    # [build_platform != target_platform]
+    - r-spatstat.univar >=3.1_1    # [build_platform != target_platform]
+    - r-spatstat.utils >=3.1_1     # [build_platform != target_platform]
   host:
     - r-base
     - r-matrix
@@ -65,7 +73,6 @@ about:
   dev_url: https://github.com/spatstat/spatstat.linnet
   license: GPL-2.0-or-later
   summary: This is a subset of the 'spatstat' package, containing its functionality for spatial data on a linear network.
-  license_family: GPL2
   license_file:
     - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
     - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
